--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,14 +1,15 @@
-{% set version = "1.17.1" %}
+{% set name = "pytest-xdist" %}
+{% set version = "1.18.0" %}
 {% set hash_type = "sha256" %}
-{% set hash = "525d3708d6d3488dc5e47eac3f569484ca171e9af173ec2827e523a1b3d65f92" %}
+{% set hash = "97d2237b3acd11195c54a80af9ca2e951ef356363e052938fec1e83b67015fa3" %}
 
 package:
-  name: pytest-xdist
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: pytest-xdist-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/p/pytest-xdist/pytest-xdist-{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   {{ hash_type }}: {{ hash }}
 
 build:
@@ -20,14 +21,14 @@ requirements:
     - python
     - execnet >=1.1
     - py >=1.4.22
-    - pytest >=2.7.0
+    - pytest >=3.0.0
     - setuptools
     - setuptools_scm
   run:
     - python
     - execnet >=1.1
     - py >=1.4.22
-    - pytest >=2.7.0
+    - pytest >=3.0.0
     - setuptools
 
 test:
