--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,10 @@ requirements:
 test:
   imports:
     - xdist
+  files:
+    - dummy_test.py
+  commands:
+    - pytest -n2 dummy_test.py
 
 about:
   home: https://github.com/pytest-dev/pytest-xdist
