--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "pytest-xdist" %}
-{% set version = "1.22.1" %}
+{% set version = "1.22.2" %}
 {% set hash_type = "sha256" %}
-{% set hash = "fcd6f36bab93b0b24ec45ca12f798b9b3af71da826db0b0794b358d2f5c038de" %}
+{% set hash = "e8f5744acc270b3e7d915bdb4d5f471670f049b6fbd163d4cbd52203b075d30f" %}
 
 package:
   name: {{ name }}
@@ -14,15 +14,14 @@ source:
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  script: python -m pip install --no-deps --ignore-installed .
   noarch: python
 
 requirements:
   build:
-    - python
+    - pip
     - setuptools_scm
   run:
-    - python
     - execnet >=1.1
     - pytest >=3.0.0
     - pytest-forked
